tests/direct_dependent_node_modules/direct_dependent_node_modules.exp

Focus a file in node_modules with a dependent also in node_modules.

By focusing on a.js, we should force-check main.js, and only report
errors there, not in node_modules.
Error ------------------------------------------------------------------------------------------------------ main.js:6:2

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   main.js:6:2
   6| (x: string);
       ^

References:
   node_modules/a.js:3:18
   3| export const x = 42;
                       ^^ [1]
   main.js:6:5
   6| (x: string);
          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- main.js:9:21

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   9| export function foo(x) {}
                          ^



Found 2 errors

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
